<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.ui.InstructionFragment"
        android:label="@string/instruction"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_shoesFragment"
            app:destination="@id/shoesFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoesFragment"
        android:name="com.udacity.shoestore.ui.ShoesFragment"
        android:label="@string/shoe_store"
        tools:layout="@layout/fragment_shoes">
        <action
            android:id="@+id/action_shoesFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ui.ShoeDetailFragment"
        android:label="fragment_shoe_detail"
        tools:layout="@layout/fragment_shoe_detail">
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoesFragment"
            app:destination="@id/shoesFragment"
            app:popUpTo="@id/shoesFragment" />
    </fragment>
</navigation>