<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/username_label"
            app:startIconDrawable="@drawable/ic_email"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/text_user_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:text="@={viewModel.email}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_user_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password_label"
            app:startIconDrawable="@drawable/ic_password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:onClick="@{() -> viewModel.onLogin()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_create"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_password" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:onClick="@{() -> viewModel.onCreateUser()}"
            app:layout_constraintBottom_toBottomOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_login"
            app:layout_constraintTop_toTopOf="@+id/button_login" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/text_user_password"
            app:layout_constraintStart_toStartOf="@+id/text_user_password"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>